# leapsynth

./: Cargo.toml  LICENSE.txt  README.md  build.rs  build_and_run.sh  crashrun.txt  todo.txt
lr2/: Cargo.toml  build.rs  build.sh
lr2/src/: main.rs
src/: LeapRust.cpp  LeapRust.h  Makefile  leaprust.rs  lrcpal.rs  lrviz.rs  main.rs  notefreq.rs
